<resources>
    <string name="app_name">Daily Task Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">Todo</string>
    <string name="movies">Movies</string>
    <string name="timer">Timer</string>
    <string name="categories">Categories</string>
    <string name="add_task">Add Task</string>
    <string name="task">Task</string>
    <string name="add">Add</string>
    <string name="add_filter_by_category">Add filter by category</string>
    <string name="add_category">Add category</string>
    <string name="add_category_title">Add Category</string>
    <string name="try_again">Try again</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="update_category">Update Category</string>
    <string name="loading_please_wait">Loading... Please wait</string>
    <string name="there_is_no_category_currently">There is no category currently</string>
    <string name="choose_category">Choose Category</string>
    <string name="add_task_title">Add Task</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="add_attachment">Add attachment</string>
    <string name="delete">Delete</string>
    <string name="attach_file_with_max_size">Max File Size %s</string>
    <string name="choose_categories_to_filter">Choose categories to filter</string>
    <string name="choose_file">Choose file</string>
    <string name="ok">OK</string>
    <string name="there_is_no_task_at_the_moment">There is no task at the moment</string>
    <string name="an_error_occurred">An error occurred</string>
</resources>