<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tasks.todo.form.create.AddTaskFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/MyThemeOverlay_Toolbar"
            app:menu="@menu/edit_task_menu"
            app:navigationIcon="@drawable/baseline_close_24"
            app:title="@string/add_task_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        android:background="@color/colorSurface"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:counterEnabled="true"
            app:counterMaxLength="30">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:maxLines="30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tilTitle"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/note"
                android:minLines="4" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:layout_marginTop="8dp"
            android:id="@+id/cgCategories"
            app:layout_constraintHorizontal_bias="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:layout_constraintEnd_toEndOf="@+id/tilNote"
            app:layout_constraintStart_toStartOf="@+id/tilNote"
            app:layout_constraintTop_toBottomOf="@+id/tilNote"
            app:singleLine="false" />

        <Button
            android:id="@+id/btnAddCategory"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="0dp"
            android:text="@string/add_category"
            app:icon="@drawable/baseline_category_24"
            app:layout_constraintStart_toStartOf="@+id/tilNote"
            app:layout_constraintTop_toBottomOf="@+id/cgCategories" />

        <Button
            android:id="@+id/btnFile"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="0dp"
            android:text="@string/add_attachment"
            app:icon="@drawable/baseline_attachment_24"
            app:layout_constraintStart_toStartOf="@+id/tilNote"
            app:layout_constraintTop_toBottomOf="@+id/btnAddCategory" />

        <ImageButton
            android:id="@+id/btnDeleteFile"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="6dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_delete_24"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="@+id/btnFile"
            app:layout_constraintStart_toEndOf="@+id/btnFile"
            app:layout_constraintTop_toTopOf="@+id/btnFile" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>